[package]
name = "rping"
version = "0.1.0"
authors = ["Adam Mitha <adam.mitha@gmail.com>"]
description = "Send ICMP ECHO requests to network hosts"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
clap = { version = "4.0.22", features = ["derive"] }
color-eyre = "0.6.2"
ctrlc = "3.2.3"
internet-checksum = "0.2.1"
libc = "0.2.126"
num-traits = "0.2.15"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
